--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ Flask==2.3.3
 Flask-Bcrypt==1.0.1
 Flask-Cors==4.0.1
 Flask-DebugToolbar @ git+https://github.com/pallets-eco/flask-debugtoolbar@9b63ad1837458f14597b87ad266da3d38835071f
+Flask-JWT-Extended==4.6.0
 Flask-SQLAlchemy==3.1.1
 Flask-WTF==1.2.1
 greenlet==3.0.3
@@ -30,6 +31,7 @@ psycopg2==2.9.9
 ptyprocess==0.7.0
 pure-eval==0.2.2
 Pygments==2.17.2
+PyJWT==2.8.0
 python-dotenv==1.0.1
 requests==2.31.0
 six==1.16.0
